@@ -1,3 +1,8 @@
+2007-05-17  Kevin Cozens  <kcozens@cvs.gnome.org>
+
+	* plug-ins/script-fu/tinyscheme/scheme.c: Applied patch from
+	Eric Lamarque that optimizes backchar() use. See bug #374854.
+
 2007-05-17  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/tiff-load.c: split code to get the page name
